monticore-generator/src/test/resources/cocos/invalid/A4041/A4041.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4041;

grammar A4041 {

   symbol symbol A = "Hello";   

}
